# deep-learning-pipeline

./: Cargo.toml  README.md  pyproject.toml
datasets/: manifest.json
examples/: demo.rs
src/: art.rs  datasets.rs  error.rs  lib.rs  main.rs  model.rs  scenarios.rs  train.rs
src/dl_pipeline/: __init__.py
src/dl_pipeline/bus/: __init__.py  in_memory.py  protocol.py
src/dl_pipeline/pipeline/: __init__.py  runner.py
src/dl_pipeline/publishers/: __init__.py  dataset_batch.py
src/dl_pipeline/subscribers/: __init__.py  batch_collector.py
tests/: cli_e2e.rs  integration.rs  test_pipeline.py
